--- a/css/estilo.css
+++ b/css/estilo.css
@@ -39,14 +39,14 @@
 .topo img {
     width: 100px;
     position: relative;
-    top: 5px;
+    bottom: 10px;
     left: 15%;
 }
 
 /* container parallax 1 banner */
 
 .container-parallax1 {
-    background-image: url('/assets/parallax-imagem1.png');
+    background-image: url('./assets/parallax-imagem1.png');
     height: 100vh;
 }
 
