--- a/css/estilo.css
+++ b/css/estilo.css
@@ -267,7 +267,7 @@
 
 .container-rodape a {
     display: block;
-    position: absolute;
+    position: fixed;
     width: 60px;
     height: 60px;
     right: 50px;
